--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link href="/uicons-regular-rounded/css/uicons-regular-rounded.css" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 
